--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
       }
     ],
     "baseUrl": "src",
+    "paths": {
+      "@public/*": ["../public/*"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
