--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-variants": "^0.1.18"
+    "react-hook-form": "^7.49.2",
+    "tailwind-variants": "^0.1.18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
